1st myproject4-images updates

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h1>Welcome Index File</h1>
     <p>First File On Git.</p>
     <i>This is a italic.</i>
+    <img src="Expression List Comprehension .png" alt="Expression List Comprehension">
 </body>
 </html>
