added contact us file link with html

--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <img src="Condition List Comprehension .png" alt="Condition List Comprehension">
     <img src="Expression List Comprehension .png" alt="Expression List Comprehension">
     <a href="http://lingarajtechhub.com">Welcome LingarajTechhub</a>
+    <a href="http://contactus.html">Contact Us</a>
+    <a href="http://aboutus.html">About Us</a>
 </body>
 </html>
