--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <a href="http://lingarajtechhub.com">Welcome LingarajTechhub</a>
     <a href="http://contactus.html">Contact Us</a>
     <a href="http://aboutus.html">About Us</a>
+    <p>1st time update on github.</p>
 </body>
 </html>
