add features.html link with update index page

--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
     <a href="http://contactus.html">Contact Us</a>
     <a href="http://aboutus.html">About Us</a>
     <p>1st time update on github.</p>
+    <a href="http://features.html">Features Page</a>
 </body>
 </html>
