index.html update 2nd time here

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <a href="http://aboutus.html">About Us</a>
     <p>1st time update on github.</p>
     <a href="http://features.html">Features Page</a>
+    Github website update index.html
 </body>
 </html>
