1st update index.html from skeleton branch

--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
     <p>1st time update on github.</p>
     <a href="http://features.html">Features Page</a>
     Github website update index.html
+    this index file update from html-skeleton branch
 </body>
 </html>
