update github gh-page url

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <img src="Condition List Comprehension .png" alt="Condition List Comprehension">
     <img src="Expression List Comprehension .png" alt="Expression List Comprehension">
     <a href="http://lingarajtechhub.com">Welcome LingarajTechhub</a>
-    <a href="http://contactus.html">Contact Us</a>
-    <a href="http://aboutus.html">About Us</a>
+    <a href="https://lingarajtechhub.github.io/demo.github.io/contactus.html">Contact Us</a>
+    <a href="https://lingarajtechhub.github.io/demo.github.io/aboutus.html">About Us</a>
     <p>1st time update on github.</p>
-    <a href="http://features.html">Features Page</a>
+    <a href="https://lingarajtechhub.github.io/demo.github.io/features.html">Features Page</a>
     Github website update index.html
     this index file update from html-skeleton branch
 </body>
